# portfolio-website

./: .flake8  .pre-commit-config.yaml  Procfile  README.md  environment.yml  pyproject.toml  tools.py  tools.sh
data/: page_metadata.py  page_metadata.xlsx  page_metadata_staging.xlsx  test_page_metadata.xlsx
notebooks/: dash_app_development.ipynb  index.html  page_metadata_prototype.ipynb  sidebar_update_prototype.ipynb  style.css  utility_class_functions.ipynb
notes/: data_project_workflows.md
src/: app.py  package-lock.json  package.json  tailwind.config.js
src/assets/css/src/: input.css  output.css
src/components/: __init__.py  figures.py  footer.py  header.py  sidebar.py  table.py
src/data/: page_metadata.json
src/pages/: about_me.py  another.py  background.py  cfb_25_analysis.py  credit_supervised.py  dashboard.py  handbell_music.py  home.py  not_found_404.py  rideshare.py  sample.py  school_district.py
src/pages_markdown/: bike_sharing.md  biodiversity.md  cfb_25_analysis.md  cfb_analysis.md  credit_supervised.md  crypto_unsupervised.md  dash_test_app.md  dev_tool_cli.md  employee_db.md  guides.md  map_earthquakes.md  mars.md  mechacar.md  movies_etl.md  nba_prediction.md  rideshare.md  sample.md  school_district.md  surf_weather.md  ufo_sightings.md  weather_map_api.md
src/utils/: __init__.py  constants.py  funcs.py  project_page_constants.py
