[tool.poetry]
name = "portfolio-website"
version = "0.1.0"
description = "A portfolio website for programming projects."
authors = ["Chris Peterson <cdpeters1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
dash = "^2.7.0"
sqlalchemy = "^1.4.44"
tomli = "^2.0.1"
ibis-framework = "^4.1.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.18.0"
jupyterlab = "^3.5.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
interrogate = "^1.5.0"
flake8-docstrings = "^1.6.0"
sphinx = "^5.3.0"
docrepr = "^0.2.0"
pandas-stubs = {version = "^1.5.1", python = ">=3.10,<3.12"}
nbqa = "^1.6.0"
blacken-docs = "^1.12.1"
click = "^8.1.6"
mypy = "^1.5.1"
rich = "^13.5.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.interrogate]
ignore-init-module = true
fail-under = 100
verbose = 1
exclude = ["*.ipynb_checkpoints*"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "plotly.*"
]
ignore_missing_imports = true

[tool.nbqa.addopts]
flake8 = [
    "--extend-ignore=D100,E501"
]
interrogate = [
    "--ignore-module"
]

[tool.nbqa.md]
blacken-docs = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
