[tool.poetry]
name = "portfolio-website"
version = "0.1.0"
description = "My programming portfolio website"
authors = ["Chris Peterson <cdpeters1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.13.0"
pandas = "^2.1.0"
gunicorn = "^21.2.0"
ibis-framework = {extras = ["sqlite"], version = "^6.2.0"}
rich = "^13.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
jupyterlab = "^4.0.6"
black = "^23.9.1"
blacken-docs = "^1.16.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
interrogate = "^1.5.0"
mypy = "^1.5.1"
nbqa = "^1.7.0"
catppuccin-jupyterlab = "^0.2.0"
pre-commit = "^3.4.0"
click = "^8.1.7"
docrepr = "^0.2.0"
openpyxl = "^3.1.2"
pandas-stubs = "^2.0.3.230814"


[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.interrogate]
ignore-init-module = true
fail-under = 100
verbose = 1
exclude = ["*.ipynb_checkpoints*"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "plotly.*"
]
ignore_missing_imports = true

[tool.nbqa.addopts]
flake8 = [
    "--extend-ignore=D100,E501"
]
interrogate = [
    "--ignore-module"
]

[tool.nbqa.md]
blacken-docs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
